--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,34 +1,35 @@
-name: test
+name: test-contracts
 
-on: pull_request
-
-env:
-  FOUNDRY_PROFILE: ci
+on:
+  push:
+    branches:
+      - main
+  pull_request: {}
 
 jobs:
-  check:
-    strategy:
-      fail-fast: true
-
-    name: Foundry project
+  setup-environment:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-
-      - name: Run Forge build
+      - name: Set up environment
         run: |
-          forge --version
-          forge build --via-ir --sizes
-        id: build
+          sudo apt-get update
 
-      - name: Run Forge tests
-        run: |
-          forge test -vvv --via-ir
-        id: test
+  test-scarb-fmt:
+    needs: [setup-environment]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: software-mansion/setup-scarb@v1
+        with:
+          scarb-version: "2.6.4"
+      - run: cd contracts && scarb fmt --check
+
+  test-scarb-build:
+    needs: [setup-environment]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: software-mansion/setup-scarb@v1
+        with:
+          scarb-version: "2.6.4"
+      - run: cd contracts && scarb build
