--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -5,10 +5,16 @@ version = "0.1.0"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+starknet = "2.6.3"
 openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", rev = "e190e55" }
 
 
+[dev-dependencies]
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.23.0" }
+
 [[target.starknet-contract]]
+sierra = true
+casm = true
 
 [tool.fmt]
 sort-module-level-items = true
