--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: "2.6.4"
+          tool-versions: .tool-versions
       - run: cd contracts && scarb fmt --check
 
   check-build:
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: "2.6.4"
+          tool-versions: .tool-versions
       - run: cd contracts && scarb build
 
   check-test:
@@ -31,5 +31,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: "2.6.4"
-      - run: cd contracts && scarb test
+          tool-versions: .tool-versions
+      - uses: foundry-rs/setup-snfoundry@v3
+        with:
+          tool-versions: .tool-versions
+      - run: cd contracts && snforge test
