--- a/bridge/ethereum/foundry.toml
+++ b/bridge/ethereum/foundry.toml
@@ -4,7 +4,7 @@ out = "out"
 libs = ["lib"]
 gas_limit = 999999999
 fs_permissions = [{ access = "read-write", path = "./logs"}]
-
+evm_version="shanghai"
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
 [rpc_endpoints]
