--- a/bridge/ethereum/foundry.toml
+++ b/bridge/ethereum/foundry.toml
@@ -3,7 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 gas_limit = 999999999
-fs_permissions = [{ access = "read-write", path = "./logs"}]
+fs_permissions = [{ access = "read-write", path = "./"}]
 evm_version="shanghai"
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
