--- a/bridge/starknet/Scarb.toml
+++ b/bridge/starknet/Scarb.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 
 [dependencies]
 starknet = "2.6.3"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.11.0" }
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.14.0" }
 
 [dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.19.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.23.0" }
 
 [[target.starknet-contract]]
 sierra = true
