--- a/bridge/ethereum/.env.testnet
+++ b/bridge/ethereum/.env.testnet
@@ -23,5 +23,4 @@ STARKNET_CORE_L1_ADDRESS=0xE2Bb56ee936fd6433DC0F6e7e3b8365C906AA057 #sepolia
 BRIDGE_L1_PROXY_ADDRESS=0x0000000000000000000000000000000000000000
 
 
-# forge verify-contract 0x0A642270Cc73B2FC1605307F853712F944394564 ERC721MintFree --verifier etherscan --flatten 
-# forge verify-contract 0x58067fC62e66745e8BD4C79f2b045EE2F0a5c37E Bridge --verifier etherscan --flatten --guess-constructor-args
+# forge verify-contract 0x47fee0f901Ad3aa5B980ccBF762F1160aCa593b8 Bridge --verifier etherscan --guess-constructor-args
