veLords: update deploy script

--- a/veLords/scripts/deployment/.env.example
+++ b/veLords/scripts/deployment/.env.example
@@ -3,7 +3,7 @@ export STARKNET_NETWORK=sepolia
 export STARKNET_ACCOUNT_ADDRESS=
 export STARKNET_ACCOUNT_PRIVATE_KEY=
 
-export VELORDS_LORDS_TOKEN=0x0
+export LORDS_TOKEN=0x0
 export VELORDS_ADMIN=0x0
 export DLORDS_ADMIN=0x0
 export REWARD_POOL_ADMIN=0x0
