legacyClaim: update l2 scripts

--- a/legacyClaim/ethereum/Makefile
+++ b/legacyClaim/ethereum/Makefile
@@ -15,49 +15,5 @@ sgr0 := $(shell tput sgr0)
 bridge_l1_deploy:
 	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/Bridge.s.sol:Deploy -vvvvvvvv
 	
-bridge_set_ownership:
-	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/Bridge.s.sol:SetOwnership -vvvvvvvv
-
-bridge_deposit:
-	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/Bridge.s.sol:Deposit
-
-# ERC721MintFree l1 contract
-erc721_deploy:
-	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/ERC721.s.sol:Deploy
-
-
-# ERC721MintFree mint
-erc721_mint:
-	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/ERC721.s.sol:Mint
-
-
-
-
-# # Bridge upgrade.
-# bridge_upgrade:
-# 	@printf "$(bold)Ensure you don't forget the proxy argument:\n"
-# 	@echo "usage: make bridge_upgrade config=.yourconfig.env proxy=0x1234"
-# 	@printf "$(sgr0)\n"
-# 	export BRIDGE_L1_PROXY_ADDRESS=$(proxy) && \
-# 	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/Bridge.s.sol:Deploy
-
-
-# # Bridge local setup.
-# bridge_local_setup:
-# 	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/LocalTesting.s.sol:LocalSetup
-
-# # Bridge deposit tokens
-# bridge_deposit:
-# 	@printf "$(bold)Ensure you don't forget the proxy argument:\n"
-# 	@echo "usage: make bridge_deposit config=.yourconfig.env proxy=0x1234"
-# 	@printf "$(sgr0)\n"
-# 	export BRIDGE_L1_PROXY_ADDRESS=$(proxy) && \
-# 	forge script --broadcast  --rpc-url ${ETH_RPC_URL} --sender ${ACCOUNT_ADDRESS} script/Bridge.s.sol:Deposit
-
-# # Bridge withdraw tokens
-# bridge_withdraw:
-# 	@printf "$(bold)Ensure you don't forget the proxy argument:\n"
-# 	@echo "usage: make bridge_withdraw config=.yourconfig.env proxy=0x1234"
-# 	@printf "$(sgr0)\n"
-# 	export BRIDGE_L1_PROXY_ADDRESS=$(proxy) && \
-# 	forge script --broadcast  --rpc-url ${ETH_RPC_URL} --sender ${ACCOUNT_ADDRESS} script/Bridge.s.sol:WithdrawSN
+bridge_claim:
+	forge script --broadcast  --rpc-url ${ETH_RPC_URL} script/Bridge.s.sol:ClaimOnStarknet
