--- a/legacyClaim/starknet/scripts/deployment/.env.example
+++ b/legacyClaim/starknet/scripts/deployment/.env.example
@@ -7,3 +7,4 @@ export DEPLOYMENT_ADDRESSES_FOLDER=addresses/dev
 export L2_REWARD_TOKEN=0x0
 export L2_BRIDGE_ADMIN=0x0
 export L2_BRIDGE_FINAL_ADMIN=0x0
+export L2_REWARD_SPONSOR=0x0
