--- a/stRealms/realms/Scarb.toml
+++ b/stRealms/realms/Scarb.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 
 [dependencies]
 starknet = "2.6.3"
-openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", rev = "e190e55" }
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", rev = "e190e55" } # https://github.com/OpenZeppelin/cairo-contracts/compare/v0.12.0...v0.13.0
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git", tag="cairo-v2.6.0" }
 graffiti = { git = "https://github.com/ponderingdemocritus/graffiti", rev = "bc569531791dbc71c6cd8d9bc154c34eedad31fe" }
 
